# NewModem

./: .gitignore  CLAUDE.md  README.md  RELEASE.md  make-portable.ps1  make-portable.sh  presentation_hb9lc.html  rapport_apsk16_ftn.html  rapport_canal_nbfm.html  rapport_modem.html
.claude/: settings.local.json
docs/: modem_2x_loop_validation.html  modem_2x_reference.html  sdr_rx_architecture.html  sounder_echo_audit.html  tailfill_validation.html  v3_architecture.html  v4_architecture.html  v4_tdm_architecture.html
plans/: gui-rx-tauri.md  perf-rx-idle-surface-pro-7.md  perf-rx-rpi-bench.md  rx-late-entry-and-grid-quota.md
results/: nbfm_channel_response.csv  nbfm_level_sweep_params.json  nbfm_level_sweep_result.csv  nbfm_level_sweep_timeline.csv  nbfm_test_params.json  nbfm_test_timeline.csv  ota_dfe_results.json  ota_dfe_test_part01_dfe01.json  ota_results.json  ota_test_part01_reference.json  ota_test_part02_levelsweep02.json  ota_test_part02_modem02.json  perf-idle-sp7-1.txt  perf-idle-sp7-2a.txt  perf-idle-sp7-2b.txt  perf-idle-sp7-2c.txt  result_nbfm_real.csv  snr_sweep_log.txt
rust/: Cargo.toml  DESIGN-NOTES.md  README.md
rust/.cargo/: config.toml
rust/modem-cli/: Cargo.toml
rust/modem-cli/src/: main.rs
rust/modem-core/: Cargo.toml  README.md  export_ldpc.py
rust/modem-core-base/: Cargo.toml
rust/modem-core-base/src/: constellation.rs  demodulator.rs  equalizer.rs  farrow.rs  ffe.rs  golay.rs  interleaver.rs  lib.rs  modulator.rs  phase_smoother.rs  probe.rs  probe_analyze.rs  profile_types.rs  scrambler.rs  soft_demod.rs  streaming_dsp.rs  streaming_ffe.rs  sync.rs  timing_loop.rs  traits.rs  types.rs
rust/modem-core-base/src/ldpc/: decoder.rs  encoder.rs  mod.rs  wimax.rs
rust/modem-core/examples/: perf_idle.rs
rust/modem-core/src/: app_header.rs  constellation.rs  crc.rs  demodulator.rs  fd_acquire.rs  ffe.rs  frame.rs  framing.rs  gate.rs  header.rs  interleaver.rs  ldpc.rs  lib.rs  marker.rs  modulator.rs  payload_envelope.rs  pilot.rs  pll.rs  preamble.rs  profile.rs  raptorq_codec.rs  rrc.rs  rs.rs  rx.rs  rx_stream.rs  rx_stream_v2.rs  rx_v2.rs  rx_v2_stream.rs  soft_demod.rs  sync.rs  traits.rs  tx.rs  v3_modem.rs  v3_session.rs
rust/modem-core/src/ldpc/: decoder.rs  encoder.rs  mod.rs  wimax.rs
rust/modem-core2x/: Cargo.toml
rust/modem-core2x/examples/: diff_chunked_streaming.rs  probe_wav.rs
rust/modem-core2x/src/: frame2x.rs  gate2x.rs  lib.rs  modem2x.rs  pilot2x_tdm.rs  pilot_block.rs  plheader.rs  preburst.rs  profile2x.rs  rx2x_session.rs  rx_v4.rs  streaming_dsp.rs  streaming_ffe.rs  streaming_frontend.rs  streaming_phase.rs
rust/modem-framing/: Cargo.toml  README.md
rust/modem-framing/src/: app_header.rs  crc.rs  lib.rs
rust/modem-gui/: BUILD_DEBIAN.md  README.md
rust/modem-gui/portable/: README-portable.txt
rust/modem-gui/src/: i18n.js  index.html  main.js  style.css
rust/modem-gui/src-tauri/: .gitignore  Cargo.toml  build.rs  secret.txt.example  tauri.conf.json
rust/modem-gui/src-tauri/capabilities/: default.json
rust/modem-gui/src-tauri/configs/: README.md  tauri.pi.conf.json
rust/modem-gui/src-tauri/src/: audio.rs  audio_capture.rs  collector_client.rs  main.rs  overlay.rs  ptt.rs  rx_worker.rs  sdr_registry.rs  session_store.rs  settings.rs  tx_encode.rs  tx_worker.rs
rust/modem-gui/src-tauri/templates/: main.desktop
rust/modem-gui/src/i18n/: en.json  fr.json
rust/modem-io/: Cargo.toml  README.md
rust/modem-io/src/: alsa_capture.rs  alsa_mixer.rs  alsa_pcm.rs  alsa_sink.rs  backend.rs  cpal_capture.rs  cpal_sink.rs  devices.rs  lib.rs  traits.rs
rust/modem-pluto/: Cargo.toml  README.md
rust/modem-pluto/examples/: loopback_demo.rs  probe_iiod.rs  probe_open.rs  stream_iiod.rs
rust/modem-pluto/src/: backend.rs  device.rs  error.rs  lib.rs  rx.rs  sample_sink_adapter.rs  tx.rs
rust/modem-pluto/src/iiod/: client.rs  codec.rs  error.rs  mod.rs  target.rs
rust/modem-pluto/tests/: backend_smoke.rs
rust/modem-rtlsdr/: Cargo.toml
rust/modem-rtlsdr/src/: backend.rs  device.rs  error.rs  ffi.rs  lib.rs  rx.rs
rust/modem-sdr/: Cargo.toml
rust/modem-sdr-dsp/: Cargo.toml
rust/modem-sdr-dsp/src/: audio_filters.rs  ctcss_gen.rs  decimator.rs  emphasis.rs  fir.rs  fm_demod.rs  fm_mod.rs  freq_xlating.rs  interpolator.rs  lib.rs  nbfm_rx_chain.rs  pm_mod.rs  traits.rs
rust/modem-sdr-dsp/tests/: full_chain_round_trip.rs  radio_faithful_chain.rs
rust/modem-sdr/src/: capabilities.rs  config.rs  device.rs  error.rs  handle.rs  lib.rs  traits.rs
rust/modem-sdr/tests/: capabilities_smoke.rs
rust/modem-sdrplay/: Cargo.toml  README.md  build.rs  wrapper.h
rust/modem-sdrplay/examples/: probe_demo.rs
rust/modem-sdrplay/src/: api.rs  backend.rs  device.rs  error.rs  lib.rs  runtime_guard.rs  rx.rs
rust/modem-sdrplay/tests/: backend_smoke.rs
rust/modem-worker/: Cargo.toml  README.md  build.rs
rust/modem-worker-base/: Cargo.toml
rust/modem-worker-base/src/: event_sink.rs  lib.rs  ptt.rs  sounder.rs  tx_runtime.rs  wav_sink.rs  worker_handle.rs
rust/modem-worker/examples/: turbo_sim.rs  wav_replay_diag.rs
rust/modem-worker/src/: event_sink.rs  lib.rs  ptt.rs  rx_v3_worker.rs  rx_worker.rs  session_store.rs  tx_worker.rs
rust/modem-worker/tests/: cli_parity.rs
rust/modem-worker2x/: Cargo.toml
rust/modem-worker2x/examples/: sweep_rx_via_worker.rs  wav_to_worker.rs
rust/modem-worker2x/src/: lib.rs  rx_worker2x.rs  session_store2x.rs  streaming_frontend.rs  tx_worker2x.rs
rust/newmodem-collector/: Cargo.toml  DEPLOY_DEBIAN13.md
rust/newmodem-collector/src/: main.rs
rust/tx-cli/: Cargo.toml
rust/tx-cli/src/: main.rs
scripts/: build_4_debs.sh
study/: analyse_cascade_ota_recording.py  analyse_level_sweep.py  analyse_ota_dfe_recording.py  analyse_ota_recording.py  analyse_phase.py  analyse_received_wav.py  apsk16_cascade_comparison.py  apsk16_ftn_limit_study.py  apsk16_multipath_study.py  concat_drift_sweep.sh  diag_capture.py  drift_sweep_scrambler.sh  dual_pilot_bench.py  extract_wimax_base_matrix.py  gen_logo.py  generate_cascade_ota_wav.py  generate_ota_test_wav.py  (+25 more)
(+23 files in other folders)
