[workspace]
members = ["modem-core-base", "modem-core", "modem-cli", "modem-framing", "modem-gui/src-tauri", "modem-io", "modem-pluto", "modem-sdr", "modem-sdr-dsp", "modem-sdrplay", "modem-worker", "modem-worker-base", "newmodem-collector"]
resolver = "2"

[workspace.dependencies]
num-complex = "0.4"
thiserror = "2"
hound = "3.5"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false
