[workspace]
members = ["modem-core-base", "modem-core", "modem-cli", "modem-framing", "modem-gui/src-tauri", "modem-io", "modem-pluto", "modem-rtlsdr", "modem-sdr", "modem-sdr-dsp", "modem-sdrplay", "modem-worker", "modem-worker-base", "newmodem-collector"]
resolver = "2"

[workspace.dependencies]
num-complex = "0.4"
thiserror = "2"
hound = "3.5"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

# Quick release build for development iteration: same target tree
# (`target/release-fast/`), no LTO, opt-level 1 (good enough for the
# realtime DSP path), 256 codegen units + incremental on. Cuts the
# full GUI build from ~3 min to ~30 s on this Surface Pro 7. Run with
# `cargo build --profile release-fast -p modem-gui`.
[profile.release-fast]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 256
incremental = true
strip = false
