[package]
name = "modem-cli"
version = "0.1.0"
edition = "2021"
description = "NBFM modem CLI — WAV file TX/RX"

[[bin]]
name = "nbfm-modem"
path = "src/main.rs"

[dependencies]
modem-core = { path = "../modem-core" }
modem-core-base = { path = "../modem-core-base" }
modem-core2x = { path = "../modem-core2x" }
modem-framing = { path = "../modem-framing" }
modem-worker2x = { path = "../modem-worker2x" }
modem-worker-base = { path = "../modem-worker-base" }
hound = { workspace = true }
clap = { workspace = true }
serde_json = "1"
