[package]
name = "modem-core-base"
version = "0.1.0"
edition = "2021"
description = "Shared DSP primitives for NewModem modems — constellations, LDPC, RRC, FFE, PLL, Golay, demodulator (V3 and 2x both depend on this)"

[dependencies]
num-complex = { workspace = true }
thiserror = { workspace = true }
realfft = "3"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
