[package]
name = "modem-core"
version = "0.1.0"
edition = "2021"
description = "NBFM audio modem library — APSK/PSK/QPSK + LDPC WiMAX"

[dependencies]
num-complex = { workspace = true }
thiserror = { workspace = true }
modem-core-base = { path = "../modem-core-base" }
modem-framing = { path = "../modem-framing" }
realfft = "3"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
