[package]
name = "modem-core2x"
version = "0.1.0"
edition = "2021"
description = "NBFM audio modem — 2x PHY (DVB-S2X-inspired: PLHEADER + sparse pilot blocks + closed-loop timing). Wire-format-V4 sibling of modem-core; both depend on modem-core-base for shared DSP primitives."

[dependencies]
num-complex = { workspace = true }
thiserror = { workspace = true }
modem-core-base = { path = "../modem-core-base" }
modem-framing = { path = "../modem-framing" }
realfft = "3"
serde = { version = "1", features = ["derive"] }
