[package]
name = "modem-sdr-dsp"
version = "0.1.0"
edition = "2021"
description = "Shared NBFM signal-processing primitives for SDR backends — Rust ports of GNU Radio's analog NBFM blocks (quadrature_demod_cf, frequency_modulator_fc, fm_deemph, fm_preemph) plus polyphase resamplers locked to integer ratios against 48 kHz."
publish = false

[dependencies]
num-complex = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
