[package]
name = "modem-worker"
version = "0.1.0"
edition = "2021"
description = "GUI-agnostic TX/RX orchestration for the NBFM modem (extracted from modem-gui in phase 2 of layered-arch)"

[dependencies]
modem-core = { path = "../modem-core" }
modem-framing = { path = "../modem-framing" }
modem-io = { path = "../modem-io" }
modem-sdr-dsp = { path = "../modem-sdr-dsp" }
modem-worker-base = { path = "../modem-worker-base" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = { workspace = true }
zstd = "0.13"
# `serialport` retained transitively for code paths that haven't migrated
# yet (legacy ptt helpers in main.rs); the PttController itself now lives
# in modem-worker-base.
serialport = "4"
cpal = "0.15"

[dev-dependencies]
tempfile = "3"
