[package]
name = "modem-worker2x"
version = "0.1.0"
edition = "2021"
description = "GUI-agnostic TX/RX orchestration for the 2x family (V4 wire format). Sibling of modem-worker; both sit on top of modem-worker-base for the shared GPIO / event / handle infrastructure. Separate crate so the legacy V3 worker stays bit-for-bit unchanged."

[dependencies]
modem-core-base = { path = "../modem-core-base" }
modem-core2x = { path = "../modem-core2x" }
modem-framing = { path = "../modem-framing" }
modem-io = { path = "../modem-io" }
modem-worker-base = { path = "../modem-worker-base" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = { workspace = true }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
