[package]
name = "newmodem-collector"
version = "0.1.0"
edition = "2021"
description = "Collecteur HTTP des sondages canal — passe-plat + stockage filesystem"

[[bin]]
name = "newmodem-collector"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1"
clap = { workspace = true }
html-escape = "0.2"
