[package]
name = "modem-gui"
version = "0.1.0"
edition = "2021"
description = "NBFM modem GUI — Tauri 2 receiver"

[[bin]]
name = "nbfm-modem-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
modem-core = { path = "../../modem-core" }
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
dirs = "5"
hound = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif"] }
ravif = { version = "0.11", default-features = false, features = ["threading"] }
rgb = "0.8"
serialport = "4"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["fs"] }
