[package]
name = "modem-gui"
version = "0.1.0"
edition = "2021"
description = "NBFM modem GUI — Tauri 2 receiver"

[[bin]]
name = "nbfm-modem-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Default = all backends compiled in. CI / Pi 5 / Linux desktop ship
# this. A reduced "windows-min" build can `--no-default-features
# --features pluto` once Phase E removes the direct-named-backend
# code paths from main.rs / settings.rs.
default = ["pluto", "sdrplay"]
pluto = ["dep:modem-pluto"]
sdrplay = ["dep:modem-sdrplay"]
windows-min = ["pluto"]

[dependencies]
modem-core = { path = "../../modem-core" }
modem-core2x = { path = "../../modem-core2x" }
modem-framing = { path = "../../modem-framing" }
modem-io = { path = "../../modem-io" }
modem-sdr = { path = "../../modem-sdr" }
modem-pluto = { path = "../../modem-pluto", optional = true }
modem-sdrplay = { path = "../../modem-sdrplay", optional = true }
modem-worker = { path = "../../modem-worker" }
modem-worker2x = { path = "../../modem-worker2x" }
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
hound = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif"] }
imageproc = { version = "0.25", default-features = false }
ab_glyph = "0.2"
kamadak-exif = "0.5"
ravif = { version = "0.11", default-features = false, features = ["threading"] }
rgb = "0.8"
serialport = "4"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["fs"] }
